--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.9.13",
     "dotenv": "^16.3.1",
+    "google-auth-library": "^9.4.1",
     "ioredis": "^5.3.2"
   }
 }
