--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
     "@grpc/grpc-js": "^1.9.13",
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "google-auth-library": "^9.4.1",
-    "ioredis": "^5.3.2"
+    "ioredis": "^5.3.2",
+    "pg": "^8.11.3",
+    "sequelize": "^6.35.2"
   }
 }
