--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -6,6 +6,7 @@
     "google-auth-library": "^9.4.1",
     "ioredis": "^5.3.2",
     "pg": "^8.11.3",
-    "sequelize": "^6.35.2"
+    "sequelize": "^6.35.2",
+    "uuid": "^9.0.1"
   }
 }
