--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.3.1",
+    "jwt-decode": "^4.0.0",
     "os": "^0.1.2",
     "os-browserify": "^0.3.0",
     "path": "^0.12.7",
